<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adafruit_drivers</name>
  <version>1.0.0</version>
  <description>Module containing all used drivers</description>
  <author email="yershov@mit.edu">Dmitry Yershov</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>dt_device_utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
