<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>display_driver</name>
  <version>1.0.0</version>
  <description>An interface to the LCD display</description>
  <author email="afdaniele@ttic.edu">Andrea F. Daniele</author>
  <maintainer email="nicholasganshyan@gmail.com">nicholas-gs</maintainer>
  <license>GPLv3</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dt_interfaces_cps</exec_depend>
  <exec_depend>display_renderers</exec_depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
