<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>led_emitter</name>
  <version>1.0.0</version>
  <description>Package to control the LED lights on the Duckiebot</description>
  <maintainer email='acensi@idsc.mavt.ethz.ch'>Andrea Censi</maintainer>
  <maintainer email="nicholasganshyan@gmail.com">nicholas-gs</maintainer>
  <license>GPLv3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dt_interfaces_cps</exec_depend>
  <exec_depend>adafruit_drivers</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
