<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheel_encoder</name>
  <version>1.0.0</version>
  <description>A ROS2 interface to the wheel encoders</description>
  <author email="afdaniele@ttic.edu">Andrea F. Daniele</author>
  <maintainer email="afdaniele@ttic.edu">Andrea F. Daniele</maintainer>
  <license>GPLv3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>dt_device_utils</exec_depend>
  <exec_depend>dt_interfaces_cps</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- <exec_depend>tf_transformations</exec_depend> -->
  <!-- <exec_depend>transforms3d</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
